--- a/onlinemall-third-party/src/main/resources/application.yml
+++ b/onlinemall-third-party/src/main/resources/application.yml
@@ -26,10 +26,10 @@ spring:
             server-addr: 127.0.0.1:8848
 
     alicloud:
-      access-key: "LTAI5tApdnt5yyF4FE5Yruqb"
-      secret-key: "mD17yDCAjnxioUCuIxH3AE9axsxbfD"
+      access-key: ""
+      secret-key: ""
       oss:
-        endpoint: "oss-cn-guangzhou.aliyuncs.com"
+        endpoint: ""
 server:
   port: 30000
 management:
